k8s/micro-engine.yaml
# -*- mode: k8s; -*-
#
# Kubernetes deployment of micro-engines
#
# Copyright (C) 2023 Simon Dobson
#
# This file is part of cloud-epydemic, network simulation as a service
#
# cloud-epydemic is free software: you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published byf
# the Free Software Foundation, either version 3 of the License, or
# (at your option) any later version.
#
# cloud-epydemic is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with cloud-epydemic. If not, see <http://www.gnu.org/licenses/gpl.html>.

apiVersion: apps/v1
kind: Deployment
metadata:
  name: engine-server
  namespace: cloudepydemic
  labels:
    app: cluster
    component: engine
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cluster
      component: engine
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  template:
    metadata:
      labels:
        app: cluster
        component: engine
    spec:
      containers:
      - name: micro-engine
        image: simoninireland/micro-engine:latest
        imagePullPolicy: Never
        ports:
        - containerPort: 5000
      - name: micro-engine-rabbitmq-shim
        image: simoninireland/micro-engine-rabbitmq-shim:latest
        imagePullPolicy: Never
---
apiVersion: v1
kind: Service
metadata:
  name: micro-engine-service
  namespace: cloudepydemic
  labels:
    app: cluster
    component: micro-engine-service
spec:
  type: ClusterIP
  selector:
    app: cluster
    component: micro-engine
  ports:
  - name: http
    port: 5000
    protocol: TCP
    targetPort: 5000
