k8s/ingress.yaml
# -*- mode: k8s; -*-
#
# Kubernetes deployment for an Istio ingress
#
# Copyright (C) 2023 Simon Dobson
#
# This file is part of cloud-epydemic, network simulation as a service
#
# cloud-epydemic is free software: you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published byf
# the Free Software Foundation, either version 3 of the License, or
# (at your option) any later version.
#
# cloud-epydemic is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with cloud-epydemic. If not, see <http://www.gnu.org/licenses/gpl.html>.

apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: cluster-ingress
spec:
  selector:
    istio: ingressgateway     # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: cluster-ingress-service
spec:
  hosts:
  - "*"
  gateways:
  - cluster-ingress
  http:
  - match:
    - uri:
        exact: /
    - uri:
        prefix: /api/v1
    route:
    - destination:
        host: gateway
        port:
          number: 5000
